@@ -1,14 +1,11 @@
 package ru.hh.nab.websocket;
 
+import jakarta.websocket.server.ServerEndpoint;
 import java.util.Collection;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
-import javax.servlet.ServletException;
-import javax.websocket.DeploymentException;
-import javax.websocket.server.ServerEndpoint;
-import org.eclipse.jetty.websocket.jsr356.server.ServerContainer;
-import org.eclipse.jetty.websocket.jsr356.server.deploy.WebSocketServerContainerInitializer;
+import org.eclipse.jetty.websocket.jakarta.server.config.JakartaWebSocketServletContainerInitializer;
+import org.eclipse.jetty.websocket.jakarta.server.internal.JakartaWebSocketServerContainer;
 import ru.hh.nab.starter.NabApplicationBuilder;
 
 public class NabWebsocketConfigurator {
@@ -19,32 +16,30 @@ public class NabWebsocketConfigurator {
 
     nabApplicationBuilder.onWebAppStarted((servletContext, springWebApplicationContext) -> {
       try {
-        new WebSocketServerContainerInitializer().onStartup(Set.of(), servletContext);
-      } catch (ServletException e) {
+        new JakartaWebSocketServletContainerInitializer().onStartup(Set.of(), servletContext);
+      } catch (Exception e) {
         throw new RuntimeException(e);
       }
 
-      javax.websocket.server.ServerContainer serverContainer = (ServerContainer) servletContext.getAttribute(
-          WebSocketServerContainerInitializer.ATTR_JAVAX_SERVER_CONTAINER
-      );
+      JakartaWebSocketServerContainer serverContainer = JakartaWebSocketServerContainer.getContainer(servletContext);
 
-      List<? extends Class<?>> endpoints = springWebApplicationContext
+      List<? extends Class<?>> beans = springWebApplicationContext
           .getBeansWithAnnotation(ServerEndpoint.class)
           .values()
           .stream()
           .map(Object::getClass)
           .filter(clazz -> allowedEndpointsPackages.stream().anyMatch(allowedPackage -> clazz.getName().startsWith(allowedPackage)))
-          .collect(Collectors.toList());
+          .toList();
 
-      if (endpoints.isEmpty()) {
+      if (beans.isEmpty()) {
         throw new IllegalStateException(String.format("Can not configure websocket - no %s classes found", ServerEndpoint.class.getName()));
       }
 
       try {
-        for (Class<?> endpoint : endpoints) {
-          serverContainer.addEndpoint(endpoint);
+        for (Class<?> bean : beans) {
+          serverContainer.addEndpoint(bean);
         }
-      } catch (DeploymentException e) {
+      } catch (Exception e) {
         throw new RuntimeException(e);
       }
 
